compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_unit_no_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 277
expression: "let x = <<1:unit(5)>> x"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:unit(5)>> x
  │             ^^^^^^^ This needs an explicit size

Hint: If you specify unit() you must also specify size().
See: https://gleam.run/book/tour/bit-strings.html

